--- a/bindings/fortran/tests/CMakeLists.txt
+++ b/bindings/fortran/tests/CMakeLists.txt
@@ -50,6 +50,18 @@ foreach(test ${tests})
     ${CMAKE_CURRENT_BINARY_DIR}
     )
 
+  # TEST RPATH/ RUNPATH
+  # ===================
+  # 
+  # These tests will be run from the Build directory only.
+  # Set absolute RPATHS to the other libraries.
+  # TODO: Change all paths to generators e.g. for dlite, dlite-utils etc as easier to maintain
+
+  set_target_properties(${test} PROPERTIES
+    BUILD_WITH_INSTALL_RPATH FALSE
+    BUILD_RPATH "${dlite_BINARY_DIR}/src;${dlite_BINARY_DIR}/src/utils;$<TARGET_FILE_DIR:dlite-fortran>"
+    )
+
   set(name ${test}-f90)
   add_test(
     NAME ${name}
