--- a/storages/python/CMakeLists.txt
+++ b/storages/python/CMakeLists.txt
@@ -18,12 +18,39 @@ target_include_directories(dlite-plugins-python PUBLIC
   ${dlite-src_BINARY_DIR}
   ${Python3_INCLUDE_DIRS}
   )
-set_target_properties(dlite-plugins-python PROPERTIES
-  WINDOWS_EXPORT_ALL_SYMBOLS ON
-  BUILD_RPATH "$ORIGIN/../../../"       # library is in ./dlite/share/dlite/storage-plugins, find libdlite-pyembed.so, libdlite.so, libdlite-utils.so in ./dlite
-  INSTALL_RPATH "$ORIGIN/../../../"
-  )
 
+# PLUGIN RPATH/ RUNPATH: dlite-plugins-python
+# ===========================================
+# 
+# At build, set absolute RPATHS to the other libraries.
+# 
+# At install the library will be loaded from the directory:
+# 
+#   ${CMAKE_INSTALL_PREFIX}/lib/python${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR}/site-packages/dlite/share/dlite/storage-plugins
+#   - OR - using CMake dlite directory variables:
+#   ${DLITE_PYTHONPATH}/dlite/share/dlite/storage-plugins
+# 
+# 
+# Needs to locate the libraries in:
+# 
+#   ${DLITE_PYTHONPATH}/dlite
+# 
+# 
+# The two linked libraries will be copied into the above noted folder at install.
+
+if(APPLE)
+  set_target_properties(dlite-plugins-python PROPERTIES
+    BUILD_WITH_INSTALL_RPATH FALSE
+    BUILD_RPATH "${dlite_BINARY_DIR}/src;${dlite_BINARY_DIR}/src/utils"
+    INSTALL_RPATH "@loader_path/../../.."
+    )
+else()
+  set_target_properties(dlite-plugins-python PROPERTIES
+    BUILD_WITH_INSTALL_RPATH FALSE
+    BUILD_RPATH "${dlite_BINARY_DIR}/src;${dlite_BINARY_DIR}/src/utils"
+    INSTALL_RPATH "$ORIGIN/../../.."
+    )
+endif()
 
 install(
   TARGETS dlite-plugins-python
