--- a/storages/python/tests-c/CMakeLists.txt
+++ b/storages/python/tests-c/CMakeLists.txt
@@ -106,8 +106,12 @@ foreach(test ${tests})
   )
 
 
+  if(WIN32)
+    set_property(TEST ${test} PROPERTY
+      ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:${dlite_BINARY_DIR}/src")
+  endif()
   set_property(TEST ${test} PROPERTY
-    ENVIRONMENT "PATH=${dlite_PATH_NATIVE}")
+    ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:$<JOIN:${dlite_PATH_NATIVE},\\\;>")
   if (WIN32 AND PYTHON_IS_ANACONDA)
     set_property(TEST ${test} APPEND PROPERTY
       ENVIRONMENT "PYTHONHOME=${Python3_RUNTIME_LIBRARY_DIRS}")
