--- a/storages/rdf/tests/CMakeLists.txt
+++ b/storages/rdf/tests/CMakeLists.txt
@@ -30,7 +30,7 @@ foreach(test ${tests})
   )
 
   set_property(TEST ${test} PROPERTY
-    ENVIRONMENT "PATH=${dlite_PATH_NATIVE}")
+    ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:$<JOIN:${dlite_PATH_NATIVE},\\\;>")
   set_property(TEST ${test} APPEND PROPERTY
     ENVIRONMENT "PYTHONPATH=${dlite_PYTHONPATH_NATIVE}")
   if(UNIX AND NOT APPLE)
