Move setenv to own file to avoid including config.h where config-path.h required

--- a/src/pyembed/CMakeLists.txt
+++ b/src/pyembed/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 
 set(pyembed_sources
+  utils/compat-src/setenv.c
   pyembed/dlite-pyembed.c
   pyembed/dlite-pyembed-utils.c
   pyembed/dlite-python-singletons.c
