--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -349,7 +349,7 @@ set(sources
   uuid.c
   uuid4.c
   )
-if(NOT HAVE_GETOPT)
+if(NOT(MINGW AND HAVE_GETOPT_LONG))
   list(APPEND sources compat-src/getopt.c)
 endif()
 if(WITH_SNPRINTF)
@@ -358,6 +358,9 @@ if(WITH_SNPRINTF)
 endif()
 if(NOT HAVE_REALPATH AND UNIX)
   list(APPEND sources compat-src/realpath.c)
+endif()
+if(NOT HAVE_SETENV AND HAVE__PUTENV_S)
+  list(APPEND sources compat-src/setenv.c)
 endif()
 
 add_definitions(
@@ -421,8 +424,8 @@ set_target_properties(dlite-utils PROPERTIES PUBLIC_HEADER "${headers}")
 install(
   TARGETS dlite-utils dlite-utils-static
   EXPORT  dliteTargets
-  LIBRARY DESTINATION lib
-  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib #TODO: May need to replace lib with ${LIBDIR}
+  ARCHIVE DESTINATION lib #TODO: May need to replace lib with ${LIBDIR}
   RUNTIME DESTINATION bin
   PUBLIC_HEADER DESTINATION include/dlite/utils
   INCLUDES DESTINATION include/dlite/utils
@@ -440,7 +443,7 @@ install(
   FILES
     compat-src/dirent.h
     compat-src/getopt.h
-  DESTINATION include/dlite/utils/compat
+  DESTINATION include/dlite/utils/compat-src
   )
 
 
