Help MinGW find .cmake files

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -15,6 +15,10 @@ set(python_examples
   )
 endif()
 
+if(MINGW)
+  list(APPEND CMAKE_MODULE_PATH "${dlite_SOURCE_DIR}/cmake")
+  list(REMOVE_DUPLICATES CMAKE_MODULE_PATH)
+endif()
 
 # CMake toolchain option
 if(CMAKE_TOOLCHAIN_FILE)
@@ -50,6 +54,7 @@ macro(test_example example)
       -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
       -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
       -DDLITE_ROOT=${CMAKE_INSTALL_PREFIX}
+      -DCMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}
       ${toolchain_opt}
       ${CMAKE_CURRENT_SOURCE_DIR}/${example}
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${example}
