--- a/.github/workflows/ci_build_wheels.yml
+++ b/.github/workflows/ci_build_wheels.yml
@@ -47,7 +47,6 @@ jobs:
 
           # 64-bit Windows
           - os: windows-2022
-            system_type: ["win", ""]
             arch: amd64
             py_minors: 8,13
 
@@ -59,12 +58,15 @@ jobs:
           #   py_minors: 8,13
 
           # 64-bit (Intel) macOS
-          # See issue #221: https://github.com/SINTEF/dlite/issues/221
-          # - os: macos-10.15
-          #   system_type: ["macosx", ""]
-          #   arch: x86_64
-          #   py_minors: 7,10
+          - os: macos-14
+            arch: x86_64
+            py_minors: 8,13
 
+          # 64-bit (Apple Silicon) macOS
+          - os: macos-14
+            arch: arm64
+            py_minors: 8,13
+ 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
