Add support for arm64 supported architecture

--- a/.github/workflows/ci_build_wheels.yml
+++ b/.github/workflows/ci_build_wheels.yml
@@ -77,7 +77,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.${{ contains(matrix.py_minors, ',') && 'x' || matrix.py_minors }}"
-          architecture: ${{ matrix.arch == '' && 'x86' || 'x64' }}
+          architecture: ${{ matrix.arch == '' && 'x86' || matrix.arch == 'arm64' && 'arm64' || 'x64' }}
 
       - name: Login to GitHub Container Registry
         if: startsWith(matrix.os, 'ubuntu')
