Add message for Python3_LDFLAGS for debugging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -329,6 +329,9 @@ if(WITH_PYTHON)
     OUTPUT_VARIABLE Python3_LDFLAGS
     OUTPUT_STRIP_TRAILING_WHITESPACE
   )
+
+  message(STATUS "Python3_LDFLAG = `${Python3_LDFLAGS}`")
+
   if(Python3_LDFLAGS AND NOT Python3_LDFLAGS STREQUAL "None")
     if(APPLE)
       # Strip out `-arch xyz` flags if present as on macOS multi-architecture are common,
