--- a/.github/workflows/ci_build_wheels.yml
+++ b/.github/workflows/ci_build_wheels.yml
@@ -78,8 +78,8 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.${{ contains(matrix.py_minors, ',') && 'x' || matrix.py_minors }}"
-          architecture: ${{ matrix.arch == '' && 'x86' || matrix.arch == 'arm64' && 'arm64' || 'x64' }}
+          python-version: 3.8
+        if: runner.os == 'macOS' && runner.arch == 'ARM64'
 
       - name: Login to GitHub Container Registry
         if: startsWith(matrix.os, 'ubuntu')
